Fix spacing with header and other pages

--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -66,12 +66,14 @@ header {
 
 .archive {
     .single-title {
+        margin: 2rem 0 .5rem;
         font-family: var(--header-title-font-family);
         text-transform: uppercase;
     }
 }
 
 .special {
+    margin: 2rem 0 .5rem;
     .single-title {
         font-family: var(--header-title-font-family);
         text-transform: uppercase;
